# yolo-cli/internal/router/router.go
@@ -1,6 +1,11 @@
 package router
 
 import (
+	"io/fs"
+	"net/http"
+	"strings"
+
+	"yolo-team/yolo-cli/internal/frontend"
 	"yolo-team/yolo-cli/internal/handler"
 
 	"github.com/gin-gonic/gin"
@@ -28,6 +33,7 @@ func Setup(workspace string) *gin.Engine {
 		{
 			executors.GET("", handler.Wrap(executorH.List))
 			executors.POST("", handler.Wrap(executorH.Create))
+			executors.PUT("/:name", handler.Wrap(executorH.Update))
 			executors.DELETE("/:name", handler.Wrap(executorH.Delete))
 		}
 
@@ -40,6 +46,8 @@ func Setup(workspace string) *gin.Engine {
 			issues.GET("/:key", handler.Wrap(issueH.Get))
 			issues.PUT("/:key", handler.Wrap(issueH.Update))
 			issues.DELETE("/:key", handler.Wrap(issueH.Delete))
+			issues.POST("/:key/documents", handler.Wrap(issueH.LinkDocument))
+			issues.DELETE("/:key/documents", handler.Wrap(issueH.UnlinkDocument))
 		}
 
 		docH := handler.NewDocumentHandler(workspace)
@@ -54,6 +62,39 @@ func Setup(workspace string) *gin.Engine {
 	}
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
+
+	staticFS, err := fs.Sub(frontend.FS, "client-dist")
+	if err == nil {
+		r.NoRoute(func(c *gin.Context) {
+			path := c.Request.URL.Path
+
+			if strings.HasPrefix(path, "/api") {
+				c.JSON(http.StatusNotFound, gin.H{"code": 40401, "message": "not found"})
+				return
+			}
+
+			filePath := strings.TrimPrefix(path, "/")
+			if filePath == "" {
+				filePath = "index.html"
+			}
+
+			data, err := fs.ReadFile(staticFS, filePath)
+			if err != nil {
+				data, _ = fs.ReadFile(staticFS, "index.html")
+			}
+
+			contentType := "text/html; charset=utf-8"
+			if strings.HasSuffix(filePath, ".js") {
+				contentType = "application/javascript; charset=utf-8"
+			} else if strings.HasSuffix(filePath, ".css") {
+				contentType = "text/css; charset=utf-8"
+			} else if strings.HasSuffix(filePath, ".svg") {
+				contentType = "image/svg+xml"
+			}
+
+			c.Data(http.StatusOK, contentType, data)
+		})
+	}
 
 	return r
 }
